added the match and profile pages

--- a/index.html
+++ b/index.html
@@ -11,7 +11,13 @@
     <link rel="manifest" href="site.webmanifest">
 </head>
 <body>
+    <div class="nav-buttons">
+        <button id="home-button" onclick="window.location.href='index.html'">Home</button>
+        <button id="profile-button" onclick="window.location.href='profile.html'">Profile</button>
+        <button id="match-button" onclick="window.location.href='match.html'">Match</button>
+    </div>
     <h1>VR Friends</h1>
+    <h2>Post your comments here</h2>
     <div class="container">
         <ol id="comments">
         </ol>
